# panoramic_lidar_dso

./: CMakeLists.txt  README.md
sensor/ijrr/: x_b_lb3.txt  x_lb3_c1.csv  x_lb3_c2.csv  x_lb3_c3.csv  x_lb3_c4.csv  x_lb3_c5.csv
src/: main_dso_pangolin.cpp
src/FullSystem/: CoarseInitializer.cpp  CoarseInitializer.h  CoarseTracker.cpp  CoarseTracker.h  CoarseTracker_xiang.h  FullSystem.cpp  FullSystem.h  FullSystemDebugStuff.cpp  FullSystemMarginalize.cpp  FullSystemOptPoint.cpp  FullSystemOptimize.cpp  HessianBlocks.cpp  HessianBlocks.h  ImmaturePoint.cpp  ImmaturePoint.h  PixelSelector.h  PixelSelector2.cpp  PixelSelector2.h  ResidualProjections.h  Residuals.cpp  Residuals.h
src/IOWrapper/: ImageRW.h  Output3DWrapper.h
src/IOWrapper/OpenCV/: ImageRW_OpenCV.cpp
src/IOWrapper/OutputWrapper/: SampleOutputWrapper.h
src/IOWrapper/Pangolin/: KeyFrameDisplay.cpp  KeyFrameDisplay.h  PangolinDSOViewer.cpp  PangolinDSOViewer.h
src/OptimizationBackend/: AccumulatedSCHessian.cpp  AccumulatedSCHessian.h  AccumulatedTopHessian.cpp  AccumulatedTopHessian.h  EnergyFunctional.cpp  EnergyFunctional.h  EnergyFunctionalStructs.cpp  EnergyFunctionalStructs.h  MatrixAccumulators.h  RawResidualJacobian.h
src/util/: DatasetReader.h  FrameShell.h  NumType.h  Undistort.cpp  Undistort.h  globalCalib.cpp  globalCalib.h  globalFuncs.h  lsd.cpp  lsd.h  settings.cpp  settings.h
